--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
     "codemirror": "^5.52.0",
+    "connect-redis": "^4.0.4",
     "css-loader": "^3.4.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "next": "^9.2.2",
     "node-yaml-config": "0.0.5",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.11",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "redis": "^3.0.2",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
