--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "archiver": "^3.1.1",
     "asyncapi-generator": "^0.31.0",
+    "asyncapi-parser": "^0.14.0",
     "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
     "codemirror": "^5.52.0",
@@ -23,17 +25,19 @@
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
-    "next": "^9.2.2",
-    "node-yaml-config": "0.0.5",
+    "next": "^9.3.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
+    "pg": "^7.18.2",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
+    "react-markdown-it": "^1.0.2",
     "redis": "^3.0.2",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "url-search-params-polyfill": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
