--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
-    "next": "^9.3.0",
+    "next": "^9.3.1-canary.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "pg": "^7.18.2",
@@ -36,6 +36,7 @@
     "react-icons": "^3.9.0",
     "react-markdown-it": "^1.0.2",
     "redis": "^3.0.2",
+    "slugify": "^1.4.0",
     "tailwindcss": "^1.2.0",
     "url-search-params-polyfill": "^8.0.0"
   },
