--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "next": "^9.3.1-canary.0",
     "passport": "^0.4.1",
