--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redis": "^3.0.2",
     "slugify": "^1.4.0",
     "tailwindcss": "^1.2.0",
-    "url-search-params-polyfill": "^8.0.0"
+    "url-search-params-polyfill": "^8.0.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
