Partially add developer portal (not finished) and feature flags

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon src/main.js",
     "build": "next build",
     "start": "next start"
   },
