--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
+    "analytics-node": "^3.4.0-beta.1",
     "archiver": "^3.1.1",
     "asyncapi-generator": "^0.31.0",
     "asyncapi-parser": "^0.14.0",
@@ -24,6 +25,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
+    "mailchimp-api-v3": "^1.13.1",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "next": "^9.3.1-canary.0",
