--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@monaco-editor/react": "^3.2.1",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "analytics-node": "^3.4.0-beta.1",
