Add Dockerfile and fix npm start

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/main.js",
     "build": "next build",
-    "start": "next start"
+    "start": "node src/main.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
