--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@asyncapi/generator": "^0.36.4",
+    "@asyncapi/html-template": "^0.3.0",
+    "@asyncapi/markdown-template": "^0.3.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "analytics-node": "^3.4.0-beta.1",
     "archiver": "^3.1.1",
-    "asyncapi-generator": "^0.31.0",
     "asyncapi-parser": "^0.14.0",
     "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
