--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@asyncapi/generator": "^0.36.4",
+    "@asyncapi/generator": "^0.39.0",
     "@asyncapi/html-template": "^0.3.0",
     "@asyncapi/markdown-template": "^0.3.0",
+    "@asyncapi/parser": "^0.18.1",
+    "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "analytics-node": "^3.4.0-beta.1",
     "archiver": "^3.1.1",
-    "asyncapi-parser": "^0.14.0",
     "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
     "codemirror": "^5.52.0",
@@ -33,13 +34,14 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "next": "^9.3.1-canary.0",
+    "next": "^9.3.4",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "pg": "^7.18.2",
     "postcss-import": "^12.0.1",
     "postgres-migrations": "^4.0.3",
     "problem-json": "^0.3.0",
+    "pseudo-yaml-ast": "^1.0.10",
     "react": "^16.13.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
@@ -48,7 +50,8 @@
     "slugify": "^1.4.0",
     "tailwindcss": "^1.2.0",
     "url-search-params-polyfill": "^8.0.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "yaml-ast-parser": "0.0.43"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
