--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.13.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
+    "react-ga": "^2.7.0",
     "react-icons": "^3.9.0",
     "redis": "^3.0.2",
     "slugify": "^1.4.0",
