--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@asyncapi/html-template": "^0.6.0",
     "@asyncapi/markdown-template": "^0.6.1",
     "@asyncapi/parser": "^0.18.1",
+    "@asyncapihub/components": "file:components",
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
