--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@asyncapi/html-template": "^0.6.0",
     "@asyncapi/markdown-template": "^0.6.1",
     "@asyncapi/parser": "^0.18.1",
-    "@asyncapihub/components": "file:components",
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
@@ -37,6 +36,7 @@
     "connect-redis": "^4.0.4",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
+    "emojis": "^1.0.10",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "lodash": "^4.17.15",
