--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "tailwindcss": "^1.2.0",
     "url-search-params-polyfill": "^8.0.0",
     "uuid": "^7.0.2",
+    "word-wrap": "^1.2.3",
     "yaml-ast-parser": "0.0.43"
   },
   "devDependencies": {
