Add publishConfig to plugins

--- a/plugins/sentry/package.json
+++ b/plugins/sentry/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "Sends errors to Sentry",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
