--- a/plugins/waiting-list/package.json
+++ b/plugins/waiting-list/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "Make AsyncAPI Hub implement a waiting list when someone signs up.",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
