--- a/plugins/waiting-list/package.json
+++ b/plugins/waiting-list/package.json
@@ -13,10 +13,15 @@
   "license": "Apache-2.0",
   "asyncapihub": {
     "hooks": {
-      "auth:github": ["src/hooks/signin.js"]
+      "auth:github": [
+        "src/hooks/signin.js"
+      ]
     },
     "middlewares": [
-      { "path": "src/hooks/middleware.js", "session": false }
+      {
+        "path": "src/hooks/middleware.js",
+        "session": false
+      }
     ],
     "pages": {
       "/landing/waiting-list": {
