Add billing and upgrade Next.js

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@asyncapi/html-template": "^0.6.0",
     "@asyncapi/markdown-template": "^0.6.1",
     "@asyncapi/parser": "^0.18.1",
+    "@asyncapihub/plugin-billing": "^0.2.0",
     "@asyncapihub/plugin-sentry": "^0.2.0",
     "@asyncapihub/plugin-waiting-list": "^0.1.0",
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
@@ -31,7 +32,7 @@
     "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
-    "codemirror": "^5.52.0",
+    "codemirror": "^5.53.2",
     "connect-redis": "^4.0.4",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
@@ -43,18 +44,19 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "next": "^9.3.6",
+    "next": "^9.4.0",
+    "next-route-to-express-route": "^0.2.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "postcss-import": "^12.0.1",
     "problem-json": "^0.3.0",
     "pseudo-yaml-ast": "^1.0.10",
     "react": "^16.13.0",
-    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.13.0",
     "react-ga": "^2.7.0",
     "react-icons": "^3.9.0",
     "redis": "^3.0.2",
+    "req-flash": "0.0.3",
     "slugify": "^1.4.0",
     "tailwindcss": "^1.2.0",
     "url-search-params-polyfill": "^8.0.0",
