Upgrade prisma, configure Next.js to compile plugins, and fix various errors

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
     "@prisma/cli": "^2.0.0-beta.4",
-    "@prisma/client": "^2.0.0-beta.4",
+    "@prisma/client": "^2.0.0-beta.5",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "analytics-node": "^3.4.0-beta.1",
@@ -46,6 +46,7 @@
     "morgan": "^1.9.1",
     "next": "^9.4.0",
     "next-route-to-express-route": "^0.2.0",
+    "next-transpile-modules": "^3.3.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "postcss-import": "^12.0.1",
