--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - id: deploy
-        name: Deploy the application
-        uses: idoberko2/dokku-deploy-github-action@v1
+      - name: Deploy the application
+        uses: landmaj/github-action-dokku@master
         with:
-          ssh-private-key: ${{ secrets.PROD_PRIVATE_DEPLOY_KEY }}
-          dokku-host: 'hub.asyncapi.io'
-          app-name: 'app'
+          PRIVATE_KEY: ${{ secrets.DOKKU_PRIVATE_KEY }}
+          PUBLIC_KEY: ${{ secrets.DOKKU_PUBLIC_KEY }}
+          HOST: 'hub.asyncapi.io'
+          PROJECT: app
