--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,9 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 0
-      - name: Deploy the application
-        uses: landmaj/github-action-dokku@master
+      - name: Push to dokku
+        uses: obrassard/action-dokku-deploy@v1.0.0
         with:
-          PRIVATE_KEY: ${{ secrets.PROD_PRIVATE_DEPLOY_KEY }}
-          PUBLIC_KEY: ${{ secrets.PROD_PUBLIC_DEPLOY_KEY }}
-          HOST: 'hub.asyncapi.io'
-          PROJECT: app
+          dokku_repo: 'ssh://dokku@hub.asyncapi.io:22/app'
+          ssh_key: ${{ secrets.PROD_PRIVATE_DEPLOY_KEY }}
+
