Remove unnecessary stuff before open-sourcing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asyncapihub",
+  "name": "asyncapistudio",
   "version": "0.1.0",
   "main": "src/server.js",
   "scripts": {
@@ -19,9 +19,7 @@
     "@asyncapi/html-template": "^0.9.0",
     "@asyncapi/markdown-template": "^0.9.0",
     "@asyncapi/parser": "^0.18.3",
-    "@asyncapihub/plugin-billing": "^0.4.0",
-    "@asyncapihub/plugin-sentry": "^0.2.0",
-    "@asyncapihub/plugin-waiting-list": "^0.1.0",
+    "@asyncapistudio/plugin-sentry": "^0.2.0",
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
@@ -47,9 +45,9 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "next": "^9.4.0",
+    "next": "^10.0.8",
     "next-route-to-express-route": "^0.2.0",
-    "next-transpile-modules": "^3.3.0",
+    "next-transpile-modules": "^6.3.0",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "postcss-import": "^12.0.1",
