Create a dev:prepare script

--- a/.env-template
+++ b/.env-template
@@ -1,5 +1,5 @@
 # Fill the values and rename this file to .env
 
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=your-client-id
+GITHUB_CLIENT_SECRET=your-client-secret
 
