--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/main.js",
+    "dev:prepare": "node scripts/prepare-dev.js",
     "prepare": "node scripts/prepare.js",
     "build": "next build",
     "start": "node src/main.js",
