--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@asyncapi/generator": "^1.6.0",
     "@asyncapi/html-template": "^0.18.1",
     "@asyncapi/markdown-template": "^0.9.0",
-    "@asyncapi/parser": "^0.18.3",
+    "@asyncapi/parser": "file:../parser-js",
     "@asyncapi/react-component": "file:../asyncapi-react/library/asyncapi-react-component-0.20.1.tgz",
     "@asyncapistudio/plugin-sentry": "^0.2.1",
     "@asyncapistudio/plugin-waiting-list": "^0.1.1",
