--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "@asyncapi/generator": "^1.6.0",
     "@asyncapi/html-template": "^0.18.1",
     "@asyncapi/markdown-template": "^0.9.0",
-    "@asyncapi/parser": "file:../parser-js",
+    "@asyncapi/parser": "^1.4.4",
     "@asyncapi/react-component": "file:../asyncapi-react/library/asyncapi-react-component-0.20.1.tgz",
     "@asyncapistudio/plugin-sentry": "^0.2.1",
     "@asyncapistudio/plugin-waiting-list": "^0.1.1",
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
-    "@prisma/cli": "^2.0.0-beta.4",
     "@prisma/client": "^2.0.0-beta.5",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
@@ -73,6 +72,7 @@
     "eslint-plugin-jest": "^23.9.0",
     "eslint-plugin-react": "^7.18.3",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prisma": "^2.20.1"
   }
 }
