--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "@fmvilas/pseudo-yaml-ast": "^0.2.0",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@monaco-editor/react": "^3.2.1",
-    "@prisma/cli": "^2.0.0-beta.4",
-    "@prisma/client": "^2.0.0-beta.5",
+    "@prisma/client": "^2.21.2",
     "@tailwindcss/ui": "^0.1.3",
     "@zeit/next-css": "^1.0.1",
     "analytics-node": "^3.4.0-beta.1",
@@ -53,6 +52,7 @@
     "passport": "^0.4.1",
     "passport-github2": "^0.1.11",
     "postcss-import": "^12.0.1",
+    "prisma": "^2.21.2",
     "problem-json": "^0.3.0",
     "pseudo-yaml-ast": "^1.0.10",
     "react": "^16.13.0",
