--- a/package.json
+++ b/package.json
@@ -10,13 +10,6 @@
     "@headlessui/react": "1.4.1",
     "@hookstate/core": "^3.0.12",
     "@monaco-editor/react": "^4.2.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.26",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
     "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
@@ -26,16 +19,15 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
     "react-split-pane": "^0.1.92",
     "tailwindcss": "^2.2.16",
-    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "npm run test:unit",
+    "test:unit": "react-scripts test --detectOpenHandles",
     "eject": "react-scripts eject",
     "lint": "echo \"No linter configured\"",
     "generate:assets": "npm run build"
@@ -59,6 +51,15 @@
     ]
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.3"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/js-yaml": "^4.0.3",
+    "@types/node": "^12.20.26",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.3"
   }
 }
