--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "npm run test:unit",
     "test:unit": "react-scripts test --detectOpenHandles",
     "eject": "react-scripts eject",
-    "lint": "echo \"No linter configured\"",
+    "lint": "eslint --max-warnings 0 --config .eslintrc .",
+    "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "generate:assets": "npm run build"
   },
   "eslintConfig": {
@@ -59,6 +60,10 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "7.26.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3"
   }
