--- a/package.json
+++ b/package.json
@@ -66,5 +66,10 @@
     "eslint-plugin-sonarjs": "^0.10.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules\/(?!(monaco-editor)\/)"
+    ]
   }
 }
