--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "monaco-yaml": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.2",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
     "react-split-pane": "^0.1.92",
     "tailwindcss": "^2.2.16",
     "web-vitals": "^1.1.2"
@@ -60,6 +62,7 @@
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-security": "^1.4.0",
