--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@asyncapi/specs": "^2.9.0",
     "@headlessui/react": "1.4.1",
     "@hookstate/core": "^3.0.12",
+    "@material-ui/core": "^4.12.3",
     "@monaco-editor/react": "^4.2.2",
     "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
