--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "monaco-yaml": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.6.9",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
     "react-split-pane": "^0.1.92",
@@ -69,7 +70,7 @@
   },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules\/(?!(monaco-editor)\/)"
+      "node_modules/(?!(monaco-editor)/)"
     ]
   }
 }
