--- a/package.json
+++ b/package.json
@@ -42,15 +42,17 @@
     "react-flow-renderer": "^9.6.9",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
     "react-split-pane": "^0.1.92",
     "tailwindcss": "^2.2.16",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yaml-loader": "^0.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "npm run test:unit",
-    "test:unit": "react-scripts test --detectOpenHandles",
+    "test:unit": "react-app-rewired test --detectOpenHandles",
     "eject": "react-scripts eject",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
@@ -90,8 +92,11 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "react-scripts": "4.0.3",
     "markdown-toc": "^1.2.0",
+    "raw-loader": "^4.0.2",
+    "react-app-rewire-yaml": "^1.1.0",
+    "react-app-rewired": "^2.1.8",
+    "react-scripts": "4.0.3",
     "semantic-release": "^18.0.0",
     "typescript": "^4.4.3"
   },
