--- a/src/examples/streetlights-mqtt.yml
+++ b/src/examples/streetlights-mqtt.yml
@@ -1,6 +1,6 @@
 asyncapi: '2.2.0'
 info:
-  title: Streetlights asddasdas Kafka API
+  title: Streetlights MQTT API
   version: '1.0.0'
   description: |
     The Smartylighting Streetlights API allows you to remotely manage the city lights.
@@ -15,17 +15,29 @@ info:
     url: https://www.apache.org/licenses/LICENSE-2.0
 
 servers:
-  test:
-    url: test.mykafkacluster.org:8092
-    protocol: kafka-secure
+  production:
+    url: test.mosquitto.org:{port}
+    protocol: mqtt
     description: Test broker
+    variables:
+      port:
+        description: Secure connection (TLS) is available through port 8883.
+        default: '1883'
+        enum:
+          - '1883'
+          - '8883'
     security:
-      - saslScram: []
+      - apiKey: []
+      - supportedOauthFlows:
+        - streetlights:on
+        - streetlights:off
+        - streetlights:dim
+      - openIdConnectWellKnown: []
 
 defaultContentType: application/json
 
 channels:
-  smartylighting.streetlights.1.0.event.{streetlightId}.lighting.measured:
+  smartylighting/streetlights/1/0/event/{streetlightId}/lighting/measured:
     description: The topic on which measured values may be produced and consumed.
     parameters:
       streetlightId:
@@ -34,40 +46,40 @@ channels:
       summary: Inform about environmental lighting conditions of a particular streetlight.
       operationId: receiveLightMeasurement
       traits:
-        - $ref: '#/components/operationTraits/kafka'
+        - $ref: '#/components/operationTraits/mqtt'
       message:
         $ref: '#/components/messages/lightMeasured'
 
-  smartylighting.streetlights.1.0.action.{streetlightId}.turn.on:
+  smartylighting/streetlights/1/0/action/{streetlightId}/turn/on:
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
     subscribe:
       operationId: turnOn
       traits:
-        - $ref: '#/components/operationTraits/kafka'
+        - $ref: '#/components/operationTraits/mqtt'
       message:
         $ref: '#/components/messages/turnOnOff'
 
-  smartylighting.streetlights.1.0.action.{streetlightId}.turn.off:
+  smartylighting/streetlights/1/0/action/{streetlightId}/turn/off:
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
     subscribe:
       operationId: turnOff
       traits:
-        - $ref: '#/components/operationTraits/kafka'
+        - $ref: '#/components/operationTraits/mqtt'
       message:
         $ref: '#/components/messages/turnOnOff'
 
-  smartylighting.streetlights.1.0.action.{streetlightId}.dim:
+  smartylighting/streetlights/1/0/action/{streetlightId}/dim:
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
     subscribe:
       operationId: dimLight
       traits:
-        - $ref: '#/components/operationTraits/kafka'
+        - $ref: '#/components/operationTraits/mqtt'
       message:
         $ref: '#/components/messages/dimLight'
 
@@ -136,9 +148,43 @@ components:
       description: Date and time when the message was sent.
 
   securitySchemes:
-    saslScram:
-      type: scramSha256
-      description: Provide your username and password for SASL/SCRAM authentication
+    apiKey:
+      type: apiKey
+      in: user
+      description: Provide your API key as the user and leave the password empty.
+    supportedOauthFlows:
+      type: oauth2
+      description: Flows to support OAuth 2.0
+      flows:
+        implicit:
+          authorizationUrl: 'https://authserver.example/auth'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        password:
+          tokenUrl: 'https://authserver.example/token'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        clientCredentials:
+          tokenUrl: 'https://authserver.example/token'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+        authorizationCode:
+          authorizationUrl: 'https://authserver.example/auth'
+          tokenUrl: 'https://authserver.example/token'
+          refreshUrl: 'https://authserver.example/refresh'
+          scopes:
+            'streetlights:on': Ability to switch lights on
+            'streetlights:off': Ability to switch lights off
+            'streetlights:dim': Ability to dim the lights
+    openIdConnectWellKnown:
+      type: openIdConnect
+      openIdConnectUrl: 'https://authserver.example/.well-known'
 
   parameters:
     streetlightId:
@@ -157,7 +203,7 @@ components:
             maximum: 100
 
   operationTraits:
-    kafka:
+    mqtt:
       bindings:
-        kafka:
-          clientId: my-app-id
+        mqtt:
+          qos: 1
