--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.28.1",
     "monaco-yaml": "^2.5.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.9",
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.3.0",
     "react-split-pane": "^0.1.92",
     "tailwindcss": "^2.2.16",
     "web-vitals": "^1.1.2",
