--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "react-icons": "^4.2.0",
     "react-split-pane": "^0.1.92",
     "tailwindcss": "^2.2.16",
-    "web-vitals": "^1.1.2",
-    "yaml-loader": "^0.6.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts start",
