fix eslint errors

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,4 +1,4 @@
 # Disable specific file since it would introduce more complexity to reduce it - mainly code complexity and complex template literals
-sonar.exclusions=public/js/monaco/**
+sonar.exclusions=public/js/monaco/**,src/tailwind.css
 # Disable duplicate code in tests since it would introduce more complexity to reduce it.
 sonar.cpd.exclusions=public/js/monaco/**
