--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.28.1",
     "monaco-yaml": "^2.5.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.9",
