--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@hookstate/core": "^3.0.12",
     "@monaco-editor/react": "^4.2.2",
     "allotment": "^1.4.1",
+    "classnames": "^2.3.1",
+    "eventemitter3": "^4.0.7",
     "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
     "monaco-editor": "^0.28.1",
     "monaco-yaml": "^2.5.1",
     "raw-loader": "^4.0.2",
@@ -45,6 +48,7 @@
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
     "react-split-pane": "^0.1.92",
+    "use-resize-observer": "^8.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -84,6 +88,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/js-yaml": "^4.0.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
