--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "monaco-yaml": "^2.5.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.9",
     "react-hot-toast": "2.1.1",
