--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-toast": "2.1.1",
     "react-icons": "^4.2.0",
     "react-split-pane": "^0.1.92",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
