--- a/.eslintrc
+++ b/.eslintrc
@@ -112,6 +112,7 @@ rules:
   prefer-template: 2
 
   # React
+  react/prop-types: off
   react/jsx-uses-react: off
   react/react-in-jsx-scope: off
 
