--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "./LICENSE"
   ],
   "dependencies": {
+    "@asyncapi/avro-schema-parser": "^1.0.1",
     "@asyncapi/converter": "^0.6.1",
+    "@asyncapi/openapi-schema-parser": "^2.0.1",
     "@asyncapi/parser": "^1.12.0",
     "@asyncapi/react-component": "^1.0.0-next.31",
     "@asyncapi/specs": "^2.12.0",
