add review suggestions

--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run build && npm run generate:readme:toc",
+    "generate:template-parameters": "ts-node ./scripts/template-parameters.ts",
     "generate:docker": "docker build --tag asyncapi/studio .",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "npm run generate:docker && semantic-release",
+    "postinstall": "npm run generate:template-parameters",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
   },
   "browserslist": {
