--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@asyncapi/avro-schema-parser": "^1.0.1",
     "@asyncapi/converter": "^0.7.0",
     "@asyncapi/openapi-schema-parser": "^2.0.1",
-    "@asyncapi/parser": "^1.14.0",
+    "@asyncapi/parser": "^1.14.1",
     "@asyncapi/react-component": "^1.0.0-next.33",
     "@asyncapi/specs": "^2.13.0",
     "@headlessui/react": "1.4.1",
@@ -58,9 +58,11 @@
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run build && npm run generate:readme:toc",
+    "generate:template-parameters": "ts-node ./scripts/template-parameters.ts",
     "generate:docker": "docker build --tag asyncapi/studio .",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "npm run generate:docker && semantic-release",
+    "postinstall": "npm run generate:template-parameters",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
   },
   "browserslist": {
@@ -76,6 +78,17 @@
     ]
   },
   "devDependencies": {
+    "@asyncapi/dotnet-nats-template": "^0.4.3",
+    "@asyncapi/go-watermill-template": "^0.1.36",
+    "@asyncapi/html-template": "^0.24.8",
+    "@asyncapi/java-spring-cloud-stream-template": "^0.11.5",
+    "@asyncapi/java-spring-template": "^0.25.1",
+    "@asyncapi/java-template": "^0.1.0",
+    "@asyncapi/markdown-template": "^1.0.0",
+    "@asyncapi/nodejs-template": "^0.11.4",
+    "@asyncapi/nodejs-ws-template": "^0.9.21",
+    "@asyncapi/python-paho-template": "^0.2.12",
+    "@asyncapi/ts-nats-template": "^0.5.13",
     "@craco/craco": "^6.4.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/github": "^8.0.1",
@@ -87,6 +100,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/js-yaml": "^4.0.3",
+    "@types/json-schema": "^7.0.9",
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
@@ -103,6 +117,7 @@
     "react-scripts": "4.0.3",
     "semantic-release": "^18.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.3"
   },
   "jest": {
