--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   ],
   "dependencies": {
     "@asyncapi/avro-schema-parser": "^1.0.1",
-    "@asyncapi/converter": "^0.7.0",
+    "@asyncapi/converter": "^0.9.0",
     "@asyncapi/openapi-schema-parser": "^2.0.1",
     "@asyncapi/parser": "^1.14.1",
-    "@asyncapi/react-component": "^1.0.0-next.33",
+    "@asyncapi/react-component": "^1.0.0-next.34",
     "@asyncapi/specs": "^2.13.0",
     "@headlessui/react": "1.4.1",
     "@hookstate/core": "^3.0.12",
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "start": "cross-env DISABLE_ESLINT_PLUGIN=true craco start",
-    "build": "cross-env DISABLE_ESLINT_PLUGIN=true craco build",
+    "build": "npm run generate:template-parameters && cross-env DISABLE_ESLINT_PLUGIN=true craco build",
     "test": "npm run test:unit",
     "test:unit": "cross-env DISABLE_ESLINT_PLUGIN=true craco test --detectOpenHandles",
     "eject": "react-scripts eject",
@@ -62,7 +62,6 @@
     "generate:docker": "docker build --tag asyncapi/studio .",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "npm run generate:docker && semantic-release",
-    "postinstall": "npm run generate:template-parameters",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
   },
   "browserslist": {
