chore: remove github-bot from codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 
 # The default owners are automatically added as reviewers when you open a pull request unless different owners are specified in the file.
 
-* @fmvilas @boyney123 @mcturco @magicmatatjahu @github-actions[bot]
+* @fmvilas @boyney123 @mcturco @magicmatatjahu
