fix: update monaco config even in invalid spec (#352)

--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
   ],
   "dependencies": {
     "@asyncapi/avro-schema-parser": "^1.0.1",
-    "@asyncapi/converter": "^0.11.0",
+    "@asyncapi/converter": "^1.0.0",
     "@asyncapi/openapi-schema-parser": "^2.0.1",
     "@asyncapi/parser": "^1.15.1",
     "@asyncapi/react-component": "^1.0.0-next.38",
     "@asyncapi/specs": "^3.0.0",
     "@headlessui/react": "1.4.1",
     "@hookstate/core": "^3.0.12",
-    "@monaco-editor/react": "^4.2.2",
+    "@monaco-editor/react": "^4.4.5",
     "@semantic-release-plus/docker": "^3.1.1",
     "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
-    "monaco-editor": "^0.28.1",
-    "monaco-yaml": "^2.5.1",
+    "monaco-editor": "0.28.1",
+    "monaco-yaml": "2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.9",
@@ -77,17 +77,17 @@
     ]
   },
   "devDependencies": {
-    "@asyncapi/dotnet-nats-template": "^0.8.1",
+    "@asyncapi/dotnet-nats-template": "^0.8.2",
     "@asyncapi/go-watermill-template": "^0.2.7",
     "@asyncapi/html-template": "^0.24.10",
     "@asyncapi/java-spring-cloud-stream-template": "^0.13.0",
     "@asyncapi/java-spring-template": "^0.27.0",
-    "@asyncapi/java-template": "^0.1.0",
-    "@asyncapi/markdown-template": "^1.1.0",
+    "@asyncapi/java-template": "^0.1.1",
+    "@asyncapi/markdown-template": "^1.1.1",
     "@asyncapi/nodejs-template": "^0.11.4",
-    "@asyncapi/nodejs-ws-template": "^0.9.21",
+    "@asyncapi/nodejs-ws-template": "^0.9.22",
     "@asyncapi/python-paho-template": "^0.2.13",
-    "@asyncapi/ts-nats-template": "^0.5.20",
+    "@asyncapi/ts-nats-template": "^0.5.21",
     "@craco/craco": "^6.4.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/github": "^8.0.1",
