--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "raw-loader": "^4.0.2",
     "react-scripts": "4.0.3",
     "semantic-release": "^19.0.3",
+    "swiper": "^8.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.3"
