--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@asyncapi/parser": "^2.0.0-next-major.10",
     "@asyncapi/react-component": "^1.0.0-next.44",
     "@asyncapi/specs": "^4.0.0",
-    "@headlessui/react": "1.4.1",
+    "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
     "@tippyjs/react": "^4.2.6",
@@ -43,15 +43,16 @@
     "monaco-yaml": "4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flow-renderer": "^10.3.17",
     "react-hot-toast": "2.4.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "reactflow": "^11.2.0"
   },
   "scripts": {
-    "start": "cross-env DISABLE_ESLINT_PLUGIN=true craco start",
-    "build": "npm run generate:template-parameters && cross-env DISABLE_ESLINT_PLUGIN=true craco build",
+    "dev": "npm run start",
+    "start": "craco start",
+    "build": "npm run generate:template-parameters && craco build",
     "test": "npm run test:unit",
-    "test:unit": "cross-env DISABLE_ESLINT_PLUGIN=true craco test --detectOpenHandles",
+    "test:unit": "craco test --detectOpenHandles",
     "eject": "react-scripts eject",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
     "lint:fix": "eslint --max-warnings 0 --config .eslintrc . --fix",
@@ -103,22 +104,33 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sonarjs": "^0.16.0",
+    "https-browserify": "^1.0.0",
     "markdown-toc": "^1.2.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.19",
+    "process": "^0.11.10",
     "raw-loader": "^4.0.2",
     "react-scripts": "5.0.1",
     "semantic-release": "^19.0.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "web-vitals": "^3.1.0"
+    "url": "^0.11.0",
+    "util": "^0.12.5",
+    "web-vitals": "^3.1.0",
+    "webpack": "^5.75.0"
   },
   "jest": {
     "transformIgnorePatterns": [
