feat: add multiple file support

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
     "@tippyjs/react": "^4.2.6",
+    "allotment": "^1.17.0",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
