add browser-api support

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@tippyjs/react": "^4.2.6",
     "allotment": "^1.17.0",
+    "dexie": "^3.2.2",
     "eventemitter2": "^6.4.9",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
@@ -112,6 +113,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/uuid": "^9.0.0",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "browserify-zlib": "^0.2.0",
